Test saving multiple events